# freshflow_challenge

./: pyproject.toml
data/: data.csv
freshFlow_takehome/: predictor.py  trainer.py
notebooks/: freshflow_challenge.ipynb
