[tool.poetry]
name = "freshflow_takehome"
version = "0.1.0"
description = ""
authors = ["a457953 <roberto.masciarelli@enel.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.4.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
